--- a/VideoCloudApp/Views/Shared/_Layout.cshtml
+++ b/VideoCloudApp/Views/Shared/_Layout.cshtml
@@ -9,14 +9,15 @@
     <!--<link rel="stylesheet" href="~/css/styles.css" />-->
     <link href="https://vjs.zencdn.net/7.11.4/video-js.css" rel="stylesheet" />
     <script src="https://vjs.zencdn.net/7.11.4/video.min.js"></script>
+    <script class="jsbin" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <link href="@("https://unpkg.com/@videojs/themes@1/dist/forest/index.css")" rel="stylesheet">
 
 </head>
 <body>
-    <header style="margin-top: 4rem">
+    <header style="margin-top: 5rem">
         <nav class="navbar navbar-dark bg-dark fixed-top">
             <div class="container">
-                <partial name="_NavbarPartial"/>
+                <partial name="_NavbarPartial" />
             </div>
         </nav>
     </header>
