--- a/VideoCloudApp/wwwroot/css/site.css
+++ b/VideoCloudApp/wwwroot/css/site.css
@@ -12,12 +12,6 @@ a {
     color: #0366d6;
 }
 
-.btn-primary {
-    color: #fff;
-    background-color: #1b6ec2;
-    border-color: #1861ac;
-}
-
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
     color: #fff;
     background-color: #1b6ec2;
@@ -115,6 +109,20 @@ body {
     height: 100%;
 }
 
+.col-lg-6 {
+    padding: 5px !important;
+
+}
+
+.spinner-grow{
+    display: none;
+}
+
+.spinner--db{
+    display: block;
+    text-align: center;
+}
+
 
 
     .active, .login-and-register-card:hover {
@@ -133,17 +141,6 @@ body {
     display: inline-block;
 }
 
-.btn {
-    border: none;
-    outline: none;
-    padding: 10px 16px;
-    background-color: transparent;
-    cursor: pointer;
-    font-size: 18px;
-    width: 50%;
-    border-radius: 0;
-    text-align: center;
-}
 
 .main-page-navbar-button, .main-page-navbar-button:visited, .main-page-navbar-button:hover, .main-page-navbar-button:active {
     color: white; 
@@ -151,3 +148,143 @@ body {
     padding: 0.4rem;
 }
 
+.spinner-grow {
+    display: none;
+}
+
+.spinner--db {
+    display: block;
+}
+
+.file-upload {
+    background-color: #ffffff;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.file-upload-btn {
+    width: 100%;
+    margin: 0;
+    color: #fff;
+    background: #1FB264;
+    border: none;
+    padding: 10px;
+    border-radius: 4px;
+    border-bottom: 4px solid #15824B;
+    transition: all .2s ease;
+    outline: none;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+    .file-upload-btn:hover {
+        background: #1AA059;
+        color: #ffffff;
+        transition: all .2s ease;
+        cursor: pointer;
+    }
+
+    .file-upload-btn:active {
+        border: 0;
+        transition: all .2s ease;
+    }
+
+.file-upload-content {
+    display: none;
+    text-align: center;
+}
+
+.file-upload-input {
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    outline: none;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.image-upload-wrap {
+    margin-top: 20px;
+    border: 4px dashed #1FB264;
+    position: relative;
+}
+
+    .image-dropping,
+    .image-upload-wrap:hover {
+        background-color: #1FB264;
+        border: 4px dashed #ffffff;
+    }
+
+.image-title-wrap {
+    color: #222;
+}
+
+.drag-text {
+    text-align: center;
+}
+
+    .drag-text h3 {
+        font-weight: 100;
+        text-transform: uppercase;
+        color: #15824B;
+        padding: 60px 0;
+    }
+
+.file-upload-image {
+    max-height: 200px;
+    max-width: 200px;
+    margin: auto;
+    padding: 20px;
+}
+
+.remove-image {
+    width: 100%;
+    margin: 0;
+    color: #fff;
+    background: #cd4535;
+    border: none;
+    padding: 10px;
+    border-radius: 4px;
+    border-bottom: 4px solid #b02818;
+    transition: all .2s ease;
+    outline: none;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+    .remove-image:hover {
+        background: #c13b2a;
+        color: #ffffff;
+        transition: all .2s ease;
+        cursor: pointer;
+    }
+
+    .remove-image:active {
+        border: 0;
+        transition: all .2s ease;
+    }
+
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    border: none; 
+}
+.card:hover 
+{
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.4);
+}
+
+.card a {
+    color: initial; 
+}
+
+.card a:hover {
+    text-decoration: initial;
+}
+
+.card .text-muted i {
+    margin: 0 10px;
+}
